--- a/monktree.html
+++ b/monktree.html
@@ -1,4 +1,11 @@
-<h1>Privacy Policy for Monktree</h1>
+
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Monktree</title>
+  </head>
+<body>
+      <h1>Privacy Policy for Monktree</h1>
 
 <p>At monktreeold, accessible from http://monktreeold.herokuapp.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by monktreeold and how we use it.</p>
 
@@ -41,3 +48,5 @@
 <h2>Consent</h2>
 
 <p>By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.</p>
+</body>
+</html>
